--- a/ntalk/package.json
+++ b/ntalk/package.json
@@ -1,17 +1,14 @@
 {
   "name": "ntalk",
-  "version": "0.0.0",
-  "private": true,
+  "description": "Node talk - Agenda de contatos",
+  "version": "0.0.1",
+  "private": false,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node app.js"
   },
   "dependencies": {
-    "body-parser": "~1.13.2",
-    "cookie-parser": "~1.3.5",
-    "debug": "~2.2.0",
     "ejs": "~2.3.3",
     "express": "~4.13.1",
-    "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0"
+    "express-load": "1.1.8"
   }
 }
