--- a/ntalk/package.json
+++ b/ntalk/package.json
@@ -11,6 +11,6 @@
     "express": "3.4.7",
     "express-load": "1.1.8",
     "socket.io": "0.9.16",
-    "mongoose": "3.8.4"
+    "mongoose": "3.8.4"  //Framework responsável por mapear objetos do Node.js para MongoDB.
   }
 }
