--- a/ntalk/package.json
+++ b/ntalk/package.json
@@ -19,5 +19,9 @@
     "mocha": "*",
     "should": "*",
     "supertest": "*"
+  },
+  "scripts": {
+    "start": "node app",
+    "test": "NODE_ENV=test ./node_modules/mocha/bin/mocha test/*.js" 
   }
 }
