Configuração do package.json para que a aplicação já inicialize utilizando clusters.

--- a/ntalk/package.json
+++ b/ntalk/package.json
@@ -21,7 +21,7 @@
     "supertest": "*"
   },
   "scripts": {
-    "start": "node app",
-    "test": "NODE_ENV=test ./node_modules/mocha/bin/mocha test/*.js" 
+    "start": "node cluster",
+    "test": "NODE_ENV=test ./node_modules/mocha/bin/mocha test/*.js"
   }
 }
