--- a/ntalk/package.json
+++ b/ntalk/package.json
@@ -4,24 +4,22 @@
   "version": "0.0.1",
   "private": false,
   "scripts": {
-    "start": "node app.js"
+    "start": "node cluster",
+    "test": "NODE_ENV=test ./node_modules/mocha/bin/mocha test/*.js"
   },
   "dependencies": {
+    "body-parser": "~1.0.0",
+    "connect-redis": "^3.1.0",
+    "cookie-parser": "~1.0.1",
     "ejs": "0.8.5",
     "express": "3.4.7",
     "express-load": "1.1.8",
-    "socket.io": "0.9.16",
     "mongoose": "~3.8.4",
-    "cookie-parser": "~1.0.1",
-    "body-parser": "~1.0.0"
+    "socket.io": "0.9.16"
   },
   "devDependencies": {
     "mocha": "*",
     "should": "*",
     "supertest": "*"
-  },
-  "scripts": {
-    "start": "node cluster",
-    "test": "NODE_ENV=test ./node_modules/mocha/bin/mocha test/*.js"
   }
 }
