--- a/ntalk/package.json
+++ b/ntalk/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.1",
   "private": false,
   "scripts": {
-    "start": "node server >> app.log",
+    "start": "node server",
     "test": "NODE_ENV=test ./node_modules/mocha/bin/mocha test/*.js"
   },
   "dependencies": {
